--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+* {
+  padding: 10px;
+  align-self: center;
+  flex-direction: column;
+}
